6.3. Impact of ManyToMany