@@ -80,7 +80,16 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+
+                <configuration>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>13</source>
+                    <target>13</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-
 </project>
